fix(Components): Fixes backend styling issues (#19)
- Sidebar is now scrollable if content is overflows on y axis
-  input-group-addon buttons should now align correctly with form-control
- Froala default style fixes for heading, links, ordered & unordered lists

--- a/assets/css/src/custom.css
+++ b/assets/css/src/custom.css
@@ -178,3 +178,15 @@ div[data-control='media-manager-crop-tool'] {
 .loading-indicator ~ .btn-text {
     @apply hidden;
 }
+
+/* fixes froala control chackbox label alignment */
+.fr-checkbox-line > label {
+    @apply inline-block;
+}
+
+/* fixes input group form control addons to be inline with input */
+.input-group {
+    .form-control + .input-group-addon {
+        @apply px-5 py-1.5;
+    }
+}
